# moth

./: README.md  craco.config.js  package-lock.json  package.json
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/moth/: sql.rs
src/components/QueryForm/: QueryForm.test.tsx  QueryForm.tsx
src/components/ResultTable/: ResultTable.test.tsx  ResultTable.tsx
